# EVA_HIT2_Assignments

./: .gitignore  CMakeLists.txt  README.md  Readme_Linux.md  Readme_Windows.md  Readme_macOS.md
CG-01_A.01_Assignment_FlugSim/glsl/: FlugSim.frag  FlugSim.vert
CG-01_A.01_Assignment_FlugSim/inc/: Aircraft.h
CG-01_A.01_Assignment_FlugSim/src/: Aircraft.cpp  FlugSim.cpp
CG-02_D.02_HelloGLSL/glsl/: helloglsl.frag  helloglsl.vert
CG-02_D.02_HelloGLSL/src/: HelloGLSL.cpp
CG-03-A.01S_3DHouse/: CMakeLists.txt
CG-03-A.01S_3DHouse/glsl/: house.frag  house.vert
CG-03-A.01S_3DHouse/src/: 3DHouse.cpp
CG-03-A.01_3DHouse/glsl/: house.frag  house.vert
CG-03-A.01_3DHouse/src/: 3DHouse.cpp
CG-03_D.01_BasicModeling/src/: BasicModeling.cpp
CG-03_D.02_Transformations/src/: Transformations.cpp
CG-03_D.03_SimpleAnimation/glsl/: animation.frag  animation.vert
CG-03_D.03_SimpleAnimation/src/: SimpleAnimation.cpp
CG-04-A.01_StripifyShader/glsl/: toonify.frag  toonify.vert  toonify1.frag  toonify2.frag
CG-04-A.01_StripifyShader/src/: StripifyShader.cpp
CG-04-A.02S_CompareShading/glsl/: gouraud.frag  gouraud.vert  phong.frag  phong.vert  switch.frag  switch.vert
CG-04-A.02S_CompareShading/src/: CompareShading.cpp
CG-04_D.01_ColorCube/glsl/: colorcube.frag  colorcube.vert
CG-04_D.01_ColorCube/src/: ColorCube.cpp
CG-04_D.02_BasicRendering/glsl/: toonify.frag  toonify1.frag
CG-04_D.02_BasicRendering/src/: BasicRendering.cpp
CG-04_D.04_GouraudShader/glsl/: gouraud.frag  gouraud.vert
CG-04_D.04_GouraudShader/src/: GouraudShader.cpp
CG-04_D.04_PhongShader/glsl/: phong.frag  phong.vert
CG-04_D.04_PhongShader/src/: PhongShader.cpp
CG-04_D.05_Texturing/glsl/: texturing.frag  texturing.vert
CG-04_D.05_Texturing/src/: Texturing.cpp
CG-04_D.05_TexturingNEW/glsl/: texturingNEW.frag  texturingNEW.vert
CG-04_D.05_TexturingNEW/src/: TexturingNEW.cpp
_CMAKE/: FindFLTK.cmake  FindGLEW.cmake  FindGLM.cmake  MSVS.VCXPROJ.USERTEMPLATE.xml
_COMMON/inc/: TrackBall.h  UtilCPP.h  UtilFLTK.h  UtilGLSL.h  UtilImage.h  UtilOpenGL.h  vboicosahedron.h  vbosphere.h
_COMMON/src/: TrackBall.cpp  UtilCPP.cpp  UtilFLTK.cpp  UtilGLSL.cpp  UtilImage.cpp  UtilOpenGL.cpp  lodepng.cpp  vboicosahedron.cpp  vbosphere.cpp  vbotorus.cpp
_LIBS/FLTK/lib/linux/Release/: README.txt
_LIBS/FLTK/lib/win/Debug/: fltk_formsd.lib  fltk_gld.lib  fltk_imagesd.lib  fltk_jpegd.lib  fltk_pngd.lib  fltk_zd.lib
_LIBS/FLTK/lib/win/Release/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
_LIBS/GLEW/lib/mac/Debug/: libGLEW.2.1.0d.dylib
_LIBS/GLEW/lib/mac/Release/: libGLEW.2.1.0.dylib
_LIBS/GLEW/lib/win/Debug/: libglew32d.lib
_LIBS/GLEW/lib/win/Release/: libglew32.lib
